$Id: ChangeLog 3713 2012-11-23 21:26:17Z chrfranke $

2012-11-23  Christian Franke  <franke@computer.org>

	Move MSVC10 project files to new directory os_win32/vc10.

2012-11-22  Christian Franke  <franke@computer.org>

	smartd: Move warning message formatting and mailer/command
	startup to new script SYSCONFDIR/smartd_warning.sh
	(Windows: smartd_warning.cmd).
	Add environment variables SMARTD_PREVCNT and SMARTD_NEXTDAYS.
	Remove host/domainname related code from smartd.cpp
	and configure.in

2012-11-22  Alex Samorukov  <samm@os2.kiev.ua>

	smartctl: implemeted support for -g/-s rcache and -g/-s wcache for SCSI
	devices to control read/write device cache.

2012-11-19  Alex Samorukov  <samm@os2.kiev.ua>

	smartctl: supports progress indicator on selftests 
	smartctl: prints rotation speed for SCSI drives, if supported
	smartctl: add headers to SCSI output, fix data blocks formatting, 
	trim identification data
	os_linux.cpp: add autodetection for PERC H700 array
	smartd: trim SCSI vendor/model/serial before creating state files

2012-11-18  Alex Samorukov  <samm@os2.kiev.ua>

	smartd.cpp: implement error counters and temperature saving to the 
	attrlog file for SCSI devices.
	smartd.cpp: added reset_warning_mail() if device is working for SCSI

2012-11-18  Christian Franke  <franke@computer.org>

	drivedb.h: Western Digital Caviar Green: Add -F xerrorlba

2012-11-17  Alex Samorukov  <samm@os2.kiev.ua>

	smartd.cpp: print lu_id for SPC devices, it is supported by standard
	smartd.cpp: added initial state file support for the SCSI devices
	smartd.cpp: add S/N to SCSI device identifier, lu_id is not available
	on some drives.
	smartd.cpp: fix warning for SCSI drives with self test in progress (#249)
	drivedb.h: added -F xerrorlba flag Seagate Barracuda LP/CC32

2012-11-09  Christian Franke  <franke@computer.org>

	Windows smartd: Allow quoting of '-M exec' argument
	to support path names with spaces.

2012-11-09  Christian Franke  <franke@computer.org>
