@@ -21,9 +21,6 @@
     <ClCompile Include="..\wmiquery.cpp">
       <Filter>os_win32</Filter>
     </ClCompile>
-    <ClCompile Include="..\wtssendmsg.cpp">
-      <Filter>os_win32</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\regex\regcomp.c">
       <Filter>regex</Filter>
     </ClCompile>
@@ -103,9 +100,6 @@
     <ClInclude Include="..\..\knowndrives.h" />
     <ClInclude Include="..\..\scsicmds.h" />
     <ClInclude Include="..\..\utility.h" />
-    <ClInclude Include="..\wtssendmsg.h">
-      <Filter>os_win32</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\ataidentify.h" />
     <ClInclude Include="..\..\dev_areca.h" />
     <ClInclude Include="config.h" />
