@@ -1,6 +1,6 @@
 smartmontools NEWS
 ------------------
-$Id: NEWS 3712 2012-11-22 22:33:29Z chrfranke $
+$Id: NEWS 3714 2012-11-24 16:34:47Z chrfranke $
 
 The most up-to-date version of this file is:
 http://smartmontools.svn.sourceforge.net/viewvc/smartmontools/trunk/smartmontools/NEWS?view=markup
@@ -20,6 +20,7 @@ Summary: smartmontools release 6.1
   with ATACAM driver.
 - FreeBSD: Improved support for SAS/SCSI disks on LSI/Megaraid controllers.
 - Windows: smartd.conf '-M exec' supports path names with spaces.
+- Windows: Tool wtssendmsg.exe to handle smartd.conf '-m console'.
 - smartd: added support for state persistence ('-s') and attribute logging 
   ('-A') for SCSI devices.
 - smartctl '-s/-g wcache' for SCSI devices to control write cache.
