@@ -1,4 +1,12 @@
-$Id: ChangeLog 3713 2012-11-23 21:26:17Z chrfranke $
+$Id: ChangeLog 3714 2012-11-24 16:34:47Z chrfranke $
+
+2012-11-24  Christian Franke  <franke@computer.org>
+
+	Windows: Add tool wtssendmsg.exe based on no longer
+	used module os_win32/wtssendmsg.cpp.
+	os_win32/smartd_warning.cmd: Fix wtssendmsg call.
+	os_win32/installer.nsi: Install smartd_warning.cmd
+	and wtssendmsg.exe.  Fix uninstall of old ChangeLog.
 
 2012-11-23  Christian Franke  <franke@computer.org>
 
